--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
-	<description>Geek.cz Java utils</description>
+	<description>A Java library for generating SPAYD QR codes</description>
 	<url>http://github.com/martiner/spayd</url>
 
 	<parent>
