--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: java
+install: true
+script: mvn verify
 jdk:
-  - oraclejdk7
   - openjdk7
-  - openjdk6
+sudo: false
+branches:
+  only:
+    - master
+cache:
+  directories:
+    - '$HOME/.m2/repository'
